<?xml version="1.0" encoding="utf-8"?>
<!-- 정적 앱 바로가기. 바로가기만 실행할 수 있는 자동화 앱이 ActionActivity 를 부르는 경로다. -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="turn_on"
        android:enabled="true"
        android:icon="@drawable/ic_shield_on"
        android:shortcutShortLabel="@string/shortcut_on_short"
        android:shortcutLongLabel="@string/shortcut_on_long">
        <intent
            android:action="com.gml.autoblocker.action.TURN_ON"
            android:targetPackage="com.gml.autoblocker"
            android:targetClass="com.gml.autoblocker.ActionActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="turn_off"
        android:enabled="true"
        android:icon="@drawable/ic_shield_off"
        android:shortcutShortLabel="@string/shortcut_off_short"
        android:shortcutLongLabel="@string/shortcut_off_long">
        <intent
            android:action="com.gml.autoblocker.action.TURN_OFF"
            android:targetPackage="com.gml.autoblocker"
            android:targetClass="com.gml.autoblocker.ActionActivity" />
    </shortcut>
</shortcuts>
